--- a/configs/st.yaml
+++ b/configs/st.yaml
@@ -13,7 +13,7 @@ language: en_de
 # Model Configuration
 # ============================================================================
 model:
-  path: models/Qwen2.5-Omni-3B
+  path: data/models/Qwen2.5-Omni-3B
 
   # LoRA (Low-Rank Adaptation) Configuration
   lora:
